--- a/Laboratory1/app/src/main/AndroidManifest.xml
+++ b/Laboratory1/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/airplane_ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Laboratory1">
-        <activity android:name=".ThirdActivity"></activity>
+        <activity android:name=".FourthActivity"></activity>
+        <activity android:name=".ThirdActivity" />
         <activity
             android:name=".SecondActivity"
             android:parentActivityName=".MainActivity" />
