--- a/Laboratory1/app/src/main/AndroidManifest.xml
+++ b/Laboratory1/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/airplane_ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Laboratory1">
-        <activity android:name=".FourthActivity"></activity>
+        <activity android:name=".SecondActivity"></activity>
         <activity android:name=".ThirdActivity" />
         <activity
-            android:name=".SecondActivity"
+            android:name=".FourthActivity"
             android:parentActivityName=".MainActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
