--- a/Laboratory1/app/build.gradle
+++ b/Laboratory1/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+    implementation 'com.google.android.material:material:1.1.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
