--- a/Laboratory1/app/src/main/AndroidManifest.xml
+++ b/Laboratory1/app/src/main/AndroidManifest.xml
@@ -11,15 +11,16 @@
         android:roundIcon="@mipmap/airplane_ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Laboratory1">
-        <activity android:name=".ThirdActivity"></activity>
+        <activity android:name="MainActivity"></activity>
+        <activity android:name=".ThirdActivity" />
         <activity android:name=".game.GameActivity" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".SixthActivity" />
         <activity
             android:name=".FourthActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".login.LoginActivity" />
         <activity android:name=".FifthActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
